# dynamicShulkEffects

./: Cargo.toml  README.md  config.json  mod.rs
effect/fighter/shulk/trail/: tex_shulk_sword1.nutexb  tex_shulk_sword1_buster.nutexb  tex_shulk_sword1_jump.nutexb  tex_shulk_sword1_shield.nutexb  tex_shulk_sword1_smash.nutexb  tex_shulk_sword1_speed.nutexb  tex_shulk_sword3.nutexb  tex_shulk_sword3_buster.nutexb  tex_shulk_sword3_jump.nutexb  tex_shulk_sword3_shield.nutexb  tex_shulk_sword3_smash.nutexb  tex_shulk_sword3_speed.nutexb  tex_shulk_sword5.nutexb  tex_shulk_sword5_buster.nutexb  tex_shulk_sword5_jump.nutexb  tex_shulk_sword5_shield.nutexb  tex_shulk_sword5_smash.nutexb  tex_shulk_sword5_speed.nutexb  tex_shulk_swordpink1.nutexb  tex_shulk_swordpink1_buster.nutexb  tex_shulk_swordpink1_jump.nutexb  tex_shulk_swordpink1_shield.nutexb  tex_shulk_swordpink1_smash.nutexb  tex_shulk_swordpink1_speed.nutexb  tex_shulk_swordred1.nutexb  tex_shulk_swordred1_buster.nutexb  tex_shulk_swordred1_jump.nutexb  tex_shulk_swordred1_shield.nutexb  tex_shulk_swordred1_smash.nutexb  tex_shulk_swordred1_speed.nutexb  texshulkswordtrace.nutexb  texshulkswordtraceadd.nutexb  texshulkswordtracepink.nutexb  texshulkswordtracepinkadd.nutexb  texshulkswordtracered.nutexb  texshulkswordtraceredadd.nutexb
src/: lib.rs
src/shulk/: mod.rs
